<resources>
  <string name="cat_bottom_nav_title">Navigation Bar (Bottom Navigation)</string>
  <string name="cat_bottom_nav_label_visibility_demo_title">Label Visibility Demo</string>
  <string name="cat_bottom_nav_animated_demo_title">Animated Demo</string>
  <string name="cat_bottom_nav_description">
    Navigation bars make it easy to explore and switch between top-level views in a single
    tap. This navigational element resides at the bottom of the screen, and provides direct access
    for three to five destinations within an app.
  </string>

  <string name="cat_bottom_nav_item_name">Item %1$d</string>
  <string name="cat_bottom_nav_page_1_name">Page 1</string>
  <string name="cat_bottom_nav_page_2_name">Page 2</string>
  <string name="cat_bottom_nav_page_3_name">Page 3</string>
  <string name="cat_bottom_nav_page_4_name">Page 4</string>
  <string name="cat_bottom_nav_page_5_name">Page 5</string>

  <string name="cat_bottom_nav_add_nav_item">Add nav item</string>
  <string name="cat_bottom_nav_remove_nav_item">Remove nav item</string>
  <string name="cat_bottom_nav_increment_badge_number" description="The title of a button to increment the notification number. [CHAR_LIMIT=20]">+Badge number</string>
  <string name="cat_bottom_nav_icon_size_slider_title">Icon size: </string>
  <string name="cat_bottom_nav_label_visibility_mode_title">Label visibility mode:</string>

  <string name="cat_bottom_nav_label_visibility_mode_auto">Auto</string>
  <string name="cat_bottom_nav_label_visibility_mode_selected">Selected</string>
  <string name="cat_bottom_nav_label_visibility_mode_labeled">Labeled</string>
  <string name="cat_bottom_nav_label_visibility_mode_unlabeled">Unlabeled</string>

  <string name="cat_bottom_nav_slider_max">48dp</string>
  <string name="cat_bottom_nav_slider_min">0dp</string>

  <string name="cat_bottom_nav_alarm">Alarm</string>
  <string name="cat_bottom_nav_clock">Clock</string>
  <string name="cat_bottom_nav_timer">Timer</string>
  <string name="cat_bottom_nav_stopwatch">Stopwatch</string>

  <string name="cat_bottom_nav_badge_gravity_top_end">Top end</string>
  <string name="cat_bottom_nav_badge_gravity_top_start">Top start</string>

  <string name="cat_bottom_nav_badge_gravity_spinner_label">Badge gravity</string>
  <string name="cat_bottom_nav_label_active_bold" translatable="false">Bold active label</string>

</resources>


