<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fadeScrollbars="false">

            <LinearLayout
                android:id="@+id/demo_controls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/cat_bottom_nav_standard_spacing"
                android:layout_marginTop="@dimen/cat_bottom_nav_standard_spacing"
                android:layout_marginRight="@dimen/cat_bottom_nav_standard_spacing"
                android:layout_marginBottom="@dimen/cat_bottom_nav_standard_spacing"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/page_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cat_bottom_nav_page_1_name" />

                    <TextView
                        android:id="@+id/page_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cat_bottom_nav_page_2_name"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/page_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cat_bottom_nav_page_3_name"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/page_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cat_bottom_nav_page_4_name"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/page_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cat_bottom_nav_page_5_name"
                        android:visibility="gone" />
                </FrameLayout>

                <Button
                    android:id="@+id/add_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_bottom_nav_add_nav_item" />

                <Button
                    android:id="@+id/remove_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_bottom_nav_remove_nav_item" />

                <Button
                    android:id="@+id/increment_badge_number_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cat_bottom_nav_increment_badge_number" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:labelFor="@+id/badge_gravity_spinner"
                        android:text="@string/cat_bottom_nav_badge_gravity_spinner_label" />

                    <Spinner
                        android:id="@id/badge_gravity_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:labelFor="@+id/bold_text_switch"
                        android:text="@string/cat_bottom_nav_label_active_bold" />

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/bold_text_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <FrameLayout
            android:id="@+id/bottom_navs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></FrameLayout>
    </LinearLayout>

</layout>

